charon/tests/ui/regressions/issue-1089-inline-const-precise-drops.out

thread 'rustc' panicked at /rustc-dev/efc9e1b50cbf2cede7ebe25f0a1fc64fd8b3e942/compiler/rustc_type_ir/src/binder.rs:793:9:
type parameter `<const_ty>/#1` (<const_ty>/#1/1) out of range when instantiating, args=[T/#0]
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Hax panicked when translating `const foo::<T>::{constant#0}`.
 --> tests/ui/regressions/issue-1089-inline-const-precise-drops.rs:4:5
  |
4 |     const { 42 }
  |     ^^^^^^^^^^^^

ERROR Charon failed to translate this code (1 errors)
