charon/tests/ui/regressions/issue-1089-inline-const-precise-drops.rs
//@ charon-args=--precise-drops
fn foo<T>() -> usize {
    const { 42 }
}
